[metadata]
name = pygnews
version = 0.1.1
author = Lawrence Okegbemi
author_email = lawrencebolu@gmail.com
description = Python library for scrapping Google news feeds 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Law101/pygnews
project_urls =
    Bug Tracker = https://github.com/Law101/pygnews/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    feedparser
    beautifulsoup4
    requests
    dateparser
    
[options.packages.find]
where = src